--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -25,13 +25,12 @@ jobs:
         run: |
           ./v/v run main.v
           mv doc_coverage.html index.html
-          cat index.html
 
       - name: Upload artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3
         with:
-          name: index.html
+          name: ./index.html
 
   deploy:
     needs: build
